loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


// ------------------------------------------------------------------------
/// @defgroup Types                                             Basic Types
// ------------------------------------------------------------------------
/// @{

typedef unsigned char VRmBYTE;

typedef unsigned short int VRmWORD;

typedef unsigned int VRmDWORD;

typedef unsigned int VRmBOOL;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;


/// @}
// ------------------------------------------------------------------------
/// @defgroup Images                                         Image Handling
// ------------------------------------------------------------------------
/// @{

/// enum for color formats
typedef VRM_ENUM _VRmColorFormat
{
	/// 32bit Pixel, Order A R G B using 32bit (DWORD) access
	VRM_ARGB_4X8,
	/// 24bit Pixel, Order B G R using 8bit (BYTE) access
	VRM_BGR_3X8,
	/// 16bit Pixel, Order R(5) G(6) B(5) using 16bit (WORD) access
	VRM_RGB_565,
	/// (effective) 16bit Pixel, Order Y U Y V, U+V = color for 2 pixels
	VRM_YUYV_4X8,
	/// 8bit Pixel
	VRM_GRAY_8,
	/// 8bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_8,
	/// 8bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_8,
	/// 8bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_RGGB_8,
	/// 8bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_GRBG_8,
	/// 10bit Pixel, storing upper 8bit in first byte, storing lower 2bit in second byte (lowest bits)
	VRM_GRAY_10,
	/// 10bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_10,
	/// 10bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_10,
	/// 10bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_RGGB_10,
	/// 10bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_GRBG_10,
	/// 16bit Pixel, using 16bit (WORD) access
	VRM_GRAY_16,
	/// 48bit Pixel, using 16bit (WORD) access
	VRM_BGR_3X16,
	/// 16bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_16,
	/// 16bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_16,
	/// 16bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_RGGB_16,
	/// 16bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_GRBG_16,
	/// (effective) 16bit Pixel, Order U Y V Y, U+V = color for 2 pixels
	VRM_UYVY_4X8
}VRmColorFormat;


/// struct for image format
typedef VRM_STRUCT _VRmImageFormat
{
	/// width in pixels
	VRmDWORD m_width;
	/// height in lines
	VRmDWORD m_height;
	/// color format enum
	VRmColorFormat m_color_format;
	/// bit combination of enum VRmImageModifier values
	int m_image_modifier;
}VRmImageFormat;


/// struct for image container
typedef VRM_STRUCT _VRmImage
{
	/// image format struct
	VRmImageFormat m_image_format;
	/// pointer to image buffer
	VRmBYTE* mp_buffer;
	/// pitch = number of bytes from (x, y) to (x, y+1)
	VRmDWORD m_pitch;
	/// timestamp of image in ms since last VRmUsbCamRestartTimer()
	double m_time_stamp;
	/// private = additional internal data
	void* mp_private;
}VRmImage;