loggerapp/datalogger/driver/vrmagic/vrmusbcam2l.h



// ------------------------------------------------------------------------
// Image Handling
// ------------------------------------------------------------------------

/// deprecated function to change source format using VRmImageFormat instead of index
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSourceFormat(VRmUsbCamDevice f_device,VRmImageFormat f_source_format);


/// Enable/Disable High-Quality Bayer Filter

/// use this function before calling VRmUsbCamGetTargetFormatListSize/Entry to
/// enable High-Quality Bayer Filter, producing a clearer image but taking
/// more processing time in VRmUsbCamConvertImage. Default is disabled.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetBayerHQ(VRmBOOL f_enable);


/// Check if High-Quality Bayer Filter is enabled
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetBayerHQ(VRmBOOL* fp_enable);


// ------------------------------------------------------------------------
// Frame Grabber
// ------------------------------------------------------------------------

/// update source format list.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUpdateSourceFormatList(VRmUsbCamDevice f_device);


/// get number of available source format list entries
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSourceFormatListSize(VRmUsbCamDevice f_device,VRmDWORD* fp_size);


/// query source format list entry with index = [0...size-1]
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSourceFormatListEntry(VRmUsbCamDevice f_device,VRmDWORD f_index,VRmImageFormat* fp_image_format);


/// get string description of source format with index = [0...size-1]
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSourceFormatListEntryDescription(VRmUsbCamDevice f_device,VRmDWORD f_index,const char** fpp_string);


/// select source format.
/// selects one of the format list entries as source image format.
/// NOTE: don't change while grabber is running. changing source formats also updates the target format list!
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetSourceFormatIndex(VRmUsbCamDevice f_device,VRmDWORD f_source_format_index);


/// get current source format index
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSourceFormatIndex(VRmUsbCamDevice f_device,VRmDWORD* fp_source_format_index);


/// get current source format
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSourceFormat(VRmUsbCamDevice f_device,VRmImageFormat* fp_source_format);


/// check if source format is a user roi format
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamIsUserROIFormat(VRmUsbCamDevice f_device,VRmDWORD f_source_format_index,VRmBOOL* fp_is_user_roi);


/// set queue size for usb buffer queue, Valid range: [1;1000], default: 3
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetQueueSize(VRmUsbCamDevice f_device,VRmDWORD f_queue_size);

/// get current queue size
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetQueueSize(VRmUsbCamDevice f_device,VRmDWORD* fp_queue_size);


/// get estimated frame rate for current settings
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetEstimatedFps(VRmUsbCamDevice f_device, double* fp_fps);


/// get number of available target format list entries for current source format.
/// obsolete, use VRmUsbCamGetTargetFormatListSizeEx2() for port #1 instead
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTargetFormatListSizeEx(VRmUsbCamDevice f_device,VRmDWORD* fp_size);


/// query target format list entry with index = [0...size-1].
/// obsolete, use VRmUsbCamGetTargetFormatListEntryEx2() for port #1 instead
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTargetFormatListEntryEx(VRmUsbCamDevice f_device,VRmDWORD f_index,VRmImageFormat* fp_target_format);


/// is next image ready.
/// check if the next image can be immediately accessed via VRmUsbCamLockNextImage()
/// if not, you can do something else and check again
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamIsNextImageReady(VRmUsbCamDevice f_device,VRmBOOL* fp_ready);


/// lock source image.
/// use fp_frames_dropped to see if frames have been dropped (optional, pass NULL otherwise),
/// use VRmUsbCamConvertImage() to convert locked image to one of the formats in target format list
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamLockNextImage(VRmUsbCamDevice f_device,VRmImage** fpp_image,VRmBOOL* fp_frames_dropped);


// ------------------------------------------------------------------------
// Configuration Settings
// ------------------------------------------------------------------------

/// there are two possible camera settings stored in hardware:
/// factory default settings and user settings

/// Reload the factory default settings
/// NOTES: this may change the selected source format, as well as trigger mode
/// and all other settings in the Settings structs.
/// the grabber must be stopped when you call this function.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamReloadFactorySettings(VRmUsbCamDevice f_device);


/// Reload the on-board stored user settings
/// NOTES: this may change the selected source format, as well as trigger mode
/// and all other settings in the Settings structs and is done automatically at 
/// VRmUsbCamOpenDevice.
/// the grabber must be stopped when you call this function.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamReloadUserSettings(VRmUsbCamDevice f_device);


/// Saves the current settings as user settings (in hardware)
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSaveUserSettings(VRmUsbCamDevice f_device);


/// check if next VRmUsbCamSaveUserSettings requires a firmware compression which takes some seconds (blocking)
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamIsFirmwareCompressionRequired(VRmUsbCamDevice f_device,VRmBOOL* fp_required);


// ------------------------------------------------------------------------
// Trigger Mode Control and Statistics
// ------------------------------------------------------------------------

/// parameter for VRmUsbCamSet/GetTriggerMode()
typedef VRM_ENUM _VRmTriggerMode
{
	/// free-running / untriggered
	VRM_TRIGGERMODE_NONE=0,
	/// snapshot triggered (external)
	VRM_TRIGGERMODE_SNAPSHOT_EXT=1,
	/// snapshot triggered (by VRmUsbCamSoftTrigger())
	VRM_TRIGGERMODE_SNAPSHOT_SOFT=2,
	/// snapshot triggered (by VRmUsbCamSoftTrigger() or external)
	VRM_TRIGGERMODE_SNAPSHOT_EXT_SOFT=3
} VRmTriggerMode;

/// set the trigger mode of the camera. By default, VRM_TRIGGERMODE_NONE (free-running)
/// is activated.
/// setting values other than VRM_TRIGGERMODE_NONE is only allowed for devices that support
/// an external trigger. Find out by checking VRmUsbCamGetFeatures() whether the device 
/// supports triggers (VRM_EXT_TRIGGER_SUPPORTED/VRM_SOFT_TRIGGER_SUPPORTED).
/// NOTE: the grabber must be stopped when this function is called
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetTriggerMode(VRmUsbCamDevice f_device, VRmTriggerMode f_mode);


/// get the current trigger mode of the camera
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTriggerMode(VRmUsbCamDevice f_device, VRmTriggerMode* fp_mode);


/// set trigger timeout.
/// current implementation has a very low precision (+/- 1000ms)
/// and has a minimum of 5000ms (which is default)
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetTriggerTimeout(VRmUsbCamDevice f_device, float f_trigger_timeout_ms);


/// get the current trigger timeout
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTriggerTimeout(VRmUsbCamDevice f_device, float* fp_trigger_timeout_ms);


/// deprecated
typedef VRM_STRUCT _VRmTriggerStats {
	/// number of trigger edges caught (ie. caused an exposure) since last
	/// call to VRmusbCamReadTriggerStats()
	VRmWORD	m_caught_count;
	/// number of trigger edges dropped (ie. NOT caused an exposure) since 
	/// last call to VRmusbCamReadTriggerStats()
	VRmWORD	m_dropped_count;
	/// timestamp of statistics in ms since last VRmUsbCamRestartTimer()
	double	m_time_stamp;
} VRmTriggerStats;


/// deprecated 
/// just use the frame counter of locked images, which is used as trigger counter in triggered modes
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamReadTriggerStats(VRmUsbCamDevice f_device,VRmTriggerStats* fp_trigger_stats);