loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 50
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSourceFormat'):
    VRmUsbCamSetSourceFormat = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetSourceFormat
    VRmUsbCamSetSourceFormat.argtypes = [VRmUsbCamDevice, VRmImageFormat]
    VRmUsbCamSetSourceFormat.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 57
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetBayerHQ'):
    VRmUsbCamSetBayerHQ = _libs['libvrmusbcam2.so'].VRmUsbCamSetBayerHQ
    VRmUsbCamSetBayerHQ.argtypes = [VRmBOOL]
    VRmUsbCamSetBayerHQ.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 60
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetBayerHQ'):
    VRmUsbCamGetBayerHQ = _libs['libvrmusbcam2.so'].VRmUsbCamGetBayerHQ
    VRmUsbCamGetBayerHQ.argtypes = [POINTER(VRmBOOL)]
    VRmUsbCamGetBayerHQ.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 67
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUpdateSourceFormatList'):
    VRmUsbCamUpdateSourceFormatList = _libs[
        'libvrmusbcam2.so'].VRmUsbCamUpdateSourceFormatList
    VRmUsbCamUpdateSourceFormatList.argtypes = [VRmUsbCamDevice]
    VRmUsbCamUpdateSourceFormatList.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 70
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSourceFormatListSize'):
    VRmUsbCamGetSourceFormatListSize = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSourceFormatListSize
    VRmUsbCamGetSourceFormatListSize.argtypes = [
        VRmUsbCamDevice, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetSourceFormatListSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 73
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSourceFormatListEntry'):
    VRmUsbCamGetSourceFormatListEntry = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSourceFormatListEntry
    VRmUsbCamGetSourceFormatListEntry.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmImageFormat)
    ]
    VRmUsbCamGetSourceFormatListEntry.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 76
if hasattr(_libs['libvrmusbcam2.so'],
           'VRmUsbCamGetSourceFormatListEntryDescription'):
    VRmUsbCamGetSourceFormatListEntryDescription = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSourceFormatListEntryDescription
    VRmUsbCamGetSourceFormatListEntryDescription.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(POINTER(c_char))
    ]
    VRmUsbCamGetSourceFormatListEntryDescription.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 81
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetSourceFormatIndex'):
    VRmUsbCamSetSourceFormatIndex = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetSourceFormatIndex
    VRmUsbCamSetSourceFormatIndex.argtypes = [VRmUsbCamDevice, VRmDWORD]
    VRmUsbCamSetSourceFormatIndex.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 84
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSourceFormatIndex'):
    VRmUsbCamGetSourceFormatIndex = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSourceFormatIndex
    VRmUsbCamGetSourceFormatIndex.argtypes = [
        VRmUsbCamDevice, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetSourceFormatIndex.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 87
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSourceFormat'):
    VRmUsbCamGetSourceFormat = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSourceFormat
    VRmUsbCamGetSourceFormat.argtypes = [
        VRmUsbCamDevice, POINTER(VRmImageFormat)
    ]
    VRmUsbCamGetSourceFormat.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 90
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamIsUserROIFormat'):
    VRmUsbCamIsUserROIFormat = _libs[
        'libvrmusbcam2.so'].VRmUsbCamIsUserROIFormat
    VRmUsbCamIsUserROIFormat.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmBOOL)
    ]
    VRmUsbCamIsUserROIFormat.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 93
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetQueueSize'):
    VRmUsbCamSetQueueSize = _libs['libvrmusbcam2.so'].VRmUsbCamSetQueueSize
    VRmUsbCamSetQueueSize.argtypes = [VRmUsbCamDevice, VRmDWORD]
    VRmUsbCamSetQueueSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 95
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetQueueSize'):
    VRmUsbCamGetQueueSize = _libs['libvrmusbcam2.so'].VRmUsbCamGetQueueSize
    VRmUsbCamGetQueueSize.argtypes = [VRmUsbCamDevice, POINTER(VRmDWORD)]
    VRmUsbCamGetQueueSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 98
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetEstimatedFps'):
    VRmUsbCamGetEstimatedFps = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetEstimatedFps
    VRmUsbCamGetEstimatedFps.argtypes = [VRmUsbCamDevice, POINTER(c_double)]
    VRmUsbCamGetEstimatedFps.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 102
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTargetFormatListSizeEx'):
    VRmUsbCamGetTargetFormatListSizeEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetTargetFormatListSizeEx
    VRmUsbCamGetTargetFormatListSizeEx.argtypes = [
        VRmUsbCamDevice, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetTargetFormatListSizeEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 106
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTargetFormatListEntryEx'):
    VRmUsbCamGetTargetFormatListEntryEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetTargetFormatListEntryEx
    VRmUsbCamGetTargetFormatListEntryEx.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmImageFormat)
    ]
    VRmUsbCamGetTargetFormatListEntryEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 111
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamIsNextImageReady'):
    VRmUsbCamIsNextImageReady = _libs[
        'libvrmusbcam2.so'].VRmUsbCamIsNextImageReady
    VRmUsbCamIsNextImageReady.argtypes = [VRmUsbCamDevice, POINTER(VRmBOOL)]
    VRmUsbCamIsNextImageReady.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 116
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLockNextImage'):
    VRmUsbCamLockNextImage = _libs['libvrmusbcam2.so'].VRmUsbCamLockNextImage
    VRmUsbCamLockNextImage.argtypes = [
        VRmUsbCamDevice, POINTER(POINTER(VRmImage)), POINTER(VRmBOOL)
    ]
    VRmUsbCamLockNextImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 129
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamReloadFactorySettings'):
    VRmUsbCamReloadFactorySettings = _libs[
        'libvrmusbcam2.so'].VRmUsbCamReloadFactorySettings
    VRmUsbCamReloadFactorySettings.argtypes = [VRmUsbCamDevice]
    VRmUsbCamReloadFactorySettings.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 136
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamReloadUserSettings'):
    VRmUsbCamReloadUserSettings = _libs[
        'libvrmusbcam2.so'].VRmUsbCamReloadUserSettings
    VRmUsbCamReloadUserSettings.argtypes = [VRmUsbCamDevice]
    VRmUsbCamReloadUserSettings.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 139
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSaveUserSettings'):
    VRmUsbCamSaveUserSettings = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSaveUserSettings
    VRmUsbCamSaveUserSettings.argtypes = [VRmUsbCamDevice]
    VRmUsbCamSaveUserSettings.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 142
if hasattr(_libs['libvrmusbcam2.so'],
           'VRmUsbCamIsFirmwareCompressionRequired'):
    VRmUsbCamIsFirmwareCompressionRequired = _libs[
        'libvrmusbcam2.so'].VRmUsbCamIsFirmwareCompressionRequired
    VRmUsbCamIsFirmwareCompressionRequired.argtypes = [
        VRmUsbCamDevice, POINTER(VRmBOOL)
    ]
    VRmUsbCamIsFirmwareCompressionRequired.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 159
enum__VRmTriggerMode = c_int

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 159
VRM_TRIGGERMODE_NONE = 0

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 159
VRM_TRIGGERMODE_SNAPSHOT_EXT = 1

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 159
VRM_TRIGGERMODE_SNAPSHOT_SOFT = 2

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 159
VRM_TRIGGERMODE_SNAPSHOT_EXT_SOFT = 3

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 159
VRmTriggerMode = enum__VRmTriggerMode

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 169
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetTriggerMode'):
    VRmUsbCamSetTriggerMode = _libs['libvrmusbcam2.so'].VRmUsbCamSetTriggerMode
    VRmUsbCamSetTriggerMode.argtypes = [VRmUsbCamDevice, VRmTriggerMode]
    VRmUsbCamSetTriggerMode.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 172
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTriggerMode'):
    VRmUsbCamGetTriggerMode = _libs['libvrmusbcam2.so'].VRmUsbCamGetTriggerMode
    VRmUsbCamGetTriggerMode.argtypes = [
        VRmUsbCamDevice, POINTER(VRmTriggerMode)
    ]
    VRmUsbCamGetTriggerMode.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 177
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetTriggerTimeout'):
    VRmUsbCamSetTriggerTimeout = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetTriggerTimeout
    VRmUsbCamSetTriggerTimeout.argtypes = [VRmUsbCamDevice, c_float]
    VRmUsbCamSetTriggerTimeout.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 180
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTriggerTimeout'):
    VRmUsbCamGetTriggerTimeout = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetTriggerTimeout
    VRmUsbCamGetTriggerTimeout.argtypes = [VRmUsbCamDevice, POINTER(c_float)]
    VRmUsbCamGetTriggerTimeout.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 192


class struct__VRmTriggerStats(Structure):
    pass


struct__VRmTriggerStats.__slots__ = [
    'm_caught_count',
    'm_dropped_count',
    'm_time_stamp',
]
struct__VRmTriggerStats._fields_ = [
    ('m_caught_count', VRmWORD),
    ('m_dropped_count', VRmWORD),
    ('m_time_stamp', c_double),
]

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 192
VRmTriggerStats = struct__VRmTriggerStats

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 196
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamReadTriggerStats'):
    VRmUsbCamReadTriggerStats = _libs[
        'libvrmusbcam2.so'].VRmUsbCamReadTriggerStats
    VRmUsbCamReadTriggerStats.argtypes = [
        VRmUsbCamDevice, POINTER(VRmTriggerStats)
    ]
    VRmUsbCamReadTriggerStats.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2l.h: 215
enum__VRmFeatures = c_int
